--- a/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Areas/Admin/Views/BSEmployee/Create.cshtml
+++ b/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Areas/Admin/Views/BSEmployee/Create.cshtml
@@ -1,18 +1,19 @@
-@model CategoryModel
+﻿@model EmployeeModel
 @{
-    //page title
-    ViewBag.PageTitle = T("Admin.Catalog.Categories.AddNew").Text;
-    //active menu item (system name)
-    NopHtml.SetActiveMenuItemSystemName("Categories");
+   
+    ViewBag.PageTitle = T("Plugins.Widgets.Employee.Admin.EmployeeList.PageTitle.AddNew").Text;
+
+    NopHtml.SetActiveMenuItemSystemName("BSEmployee");
 }
 
-<form asp-controller="Category" asp-action="Create" method="post" id="category-form">
+
+<form asp-controller="BSEmployee" asp-action="Create" method="post" id="employee-form">
     <div class="content-header clearfix">
         <h1 class="float-left">
-            @T("Admin.Catalog.Categories.AddNew")
+            @T("Plugins.Widgets.Employee.Admin.EmployeeList.PageTitle.AddNew")
             <small>
                 <i class="fas fa-arrow-circle-left"></i>
-                <a asp-action="List">@T("Admin.Catalog.Categories.BackToList")</a>
+                <a asp-action="List">@T("Plugins.Widgets.Employee.Admin.EmployeeList.BackToList")</a>
             </small>
         </h1>
         <div class="float-right">
@@ -24,8 +25,8 @@
                 <i class="far fa-save"></i>
                 @T("Admin.Common.SaveContinue")
             </button>
-            @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.CategoryDetailsButtons, additionalData = Model })
+          
         </div>
     </div>
-    @await Html.PartialAsync("_CreateOrUpdate.cshtml", Model)
+     @await Html.PartialAsync("~/Plugins/Widgets.BSEmployee/Areas/Admin/Views/BSEmployee/_CreateOrUpdateEmployee.cshtml", Model)
 </form>
