--- a/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Areas/Admin/Views/BSEmployee/_CreateOrUpdateEmployee.Info.cshtml
+++ b/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Areas/Admin/Views/BSEmployee/_CreateOrUpdateEmployee.Info.cshtml
@@ -1,26 +1,33 @@
-﻿
-
-@model EmployeeModel
+﻿@model EmployeeModel
 <div class="card-body">
-   
-         <div class="form-group row">
-                <div class="col-md-3">
-                    <nop-label asp-for="EmployeeName" />
-                </div>
-                <div class="col-md-9">
-                    <nop-editor asp-for="EmployeeName" asp-required="true" />
-                    <span asp-validation-for="EmployeeName"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-3">
-                    <nop-label asp-for="EmployeeBsId" />
-                </div>
-                <div class="col-md-9">
-                    <nop-editor asp-for="EmployeeBsId"  />
-                    <span asp-validation-for="EmployeeBsId"></span>
-                </div>
-            </div>
+
+    <div class="form-group row">
+        <div class="col-md-3">
+            <nop-label asp-for="EmployeeName" />
+        </div>
+        <div class="col-md-9">
+            <nop-editor asp-for="EmployeeName" asp-required="true" />
+            <span asp-validation-for="EmployeeName"></span>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-md-3">
+            <nop-label asp-for="EmployeeBsId" />
+        </div>
+        <div class="col-md-9">
+            <nop-editor asp-for="EmployeeBsId" />
+            <span asp-validation-for="EmployeeBsId"></span>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-md-3">
+            <nop-label asp-for="EmployeeAge" />
+        </div>
+        <div class="col-md-9">
+            <nop-editor asp-for="EmployeeAge" />
+            <span asp-validation-for="EmployeeAge"></span>
+        </div>
+    </div>
     <div class="form-group row">
         <div class="col-md-3">
             <nop-label asp-for="DesignationId" />
@@ -30,5 +37,5 @@
             <span asp-validation-for="DesignationId"></span>
         </div>
     </div>
-   
+
 </div>
