--- a/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Payments.FlexiCards/Areas/Admin/Views/FlexiCards/Configure.cshtml
+++ b/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Payments.FlexiCards/Areas/Admin/Views/FlexiCards/Configure.cshtml
@@ -1,4 +1,10 @@
 ﻿
+
+@model FlexiCardsPaymentConfigureModel
+﻿@{
+    Layout = "_ConfigurePlugin";
+}
+@await Component.InvokeAsync("StoreScopeConfiguration")
 <form asp-area="Admin" asp-controller="FlexiCards" asp-action="Configure" method="post">
     <section class="content">
         <div class="container-fluid">
